--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*outline: 1px dotted magenta;*/
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+    background-color: #282330;
+    color: white;
+}
