--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,17 @@ body {
     background-color: #282330;
     color: white;
 }
+button {
+    transition: transform .2s;
+}
+button:active {
+    transform: scale(1.1625);
+}
+.btn {
+    padding: .75rem 1.75rem;
+    border: none;
+    border-radius: 3px;
+    color: white;
+    background-color: #282330;
+    cursor: pointer;
+}
